# breachintel

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: Home.py  __init__.py
app/components/: breach_detail.py  filters.py  footer.py  metrics.py
app/pages/: 1_Trend_Analysis.py  2_Geographic_Intelligence.py  3_Attack_Vectors.py  4_Entity_Risk_Profiles.py  5_Severity_Predictor.py  6_Forecast.py  7_About.py
data/sample/: breaches_sample.csv
models/: severity_metadata.json
scripts/: download_data.py  generate_sample.py  train_models.py
src/breachintel/: config.py
src/breachintel/analysis/: attack_vectors.py  entity_profiling.py  geographic.py  trends.py
src/breachintel/data/: cleaner.py  collector.py  feature_engineer.py  validator.py
src/breachintel/ml/: explainer.py  forecaster.py  nlp_classifier.py  risk_scorer.py  severity_model.py
src/breachintel/utils/: cache.py  constants.py  logger.py
src/breachintel/visualization/: charts.py  maps.py
tests/: conftest.py  test_cleaner.py  test_collector.py  test_forecaster.py  test_nlp_classifier.py  test_risk_scorer.py  test_severity_model.py
