[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "breachintel"
version = "1.0.0"
description = "Healthcare cybersecurity breach intelligence platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["cybersecurity", "healthcare", "breach", "intelligence", "dashboard"]
authors = [
  { name = "Your Name", email = "you@example.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/enchill-svg/breachintel"
Documentation = "https://github.com/enchill-svg/breachintel#readme"
Repository = "https://github.com/enchill-svg/breachintel"
Issues = "https://github.com/enchill-svg/breachintel/issues"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "W", "UP", "S", "B", "A", "C4", "DTZ", "T20"]
ignore = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/breachintel --cov-report=term-missing --cov-fail-under=80"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
